# ace-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml  fly-deploy.yml  release.yml
.sqlx/: query-195e14c2073290f8c0ebb381fd677b8c0dd275bacb23bb94934e27d4b447f326.json  query-714fd172e9463052f48183cc5a8ff24b5ef032742322cf3d70d44b74d8895721.json  query-939740321e86d598f40652872fda65359580eb4fc4f7ddbb8853048857735dc6.json  query-c8db6fc0cf3b7627e4d7b2eef61d06c2a9ccc05f1b4a53d374961bb4bf3b929a.json  query-def441a6999414615f1dc3baedff10b441a9c9f66fae133e42acb0782a7d2eca.json
docs/: self-hosted-server.md
src/: config.rs  lib.rs
src/server/: admin.rs  api.rs  auth.rs  blobs.rs  config.rs  db.rs  error.rs  mod.rs  search.rs  tokens.rs
