[package]
name = "ace-tool-rs"
version = "0.1.16"
edition = "2021"
description = "MCP server for codebase indexing, semantic search, and prompt enhancement"
license = "GPL-3.0-only OR LicenseRef-Commercial"
authors = ["missdeer"]
repository = "https://github.com/missdeer/ace-tool-rs.git"

[lib]
name = "ace_tool"
path = "src/lib.rs"

[[bin]]
name = "ace-tool-rs"
path = "src/main.rs"

[[bin]]
name = "ace-server-rs"
path = "src/bin/server.rs"
required-features = ["server"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "http2", "charset", "rustls-tls-native-roots"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Cryptography (SHA-256)
sha2 = "0.10"

# Gitignore support
ignore = "0.4"

# Encoding detection and conversion
encoding_rs = "0.8"
encoding_rs_io = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"

# File system utilities
walkdir = "2"

# Regex for pattern matching
regex = "1"

# Parallel processing
rayon = "1.10"

# Hex encoding
hex = "0.4"

# UUID for session management
uuid = { version = "1", features = ["v4"] }

# HTTP server for Web UI
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
http-body-util = "0.1"

# Browser opening
open = "5"

# Date/time for logging
chrono = "0.4"

# Server dependencies (optional, enabled via "server" feature)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "trace"], optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"], optional = true }
argon2 = { version = "0.5", features = ["password-hash"], optional = true }
tower-sessions = { version = "0.12", optional = true }
tower-sessions-sqlx-store = { version = "0.12", features = ["sqlite"], optional = true }
rand = { version = "0.8", optional = true }

[features]
server = ["axum", "tower", "tower-http", "sqlx", "argon2", "tower-sessions", "tower-sessions-sqlx-store", "rand"]

[dev-dependencies]
# Temporary directories for tests
tempfile = "3"
# HTTP mocking for API tests
wiremock = "0.6"
